# python-packages

./: .coverage  .gitignore  DEPLOYMENT.md  DEVARMOR_SKILLS_DEPLOYMENT_COMPLETE.md  EXTENSION_FRAMEWORK_DELIVERY.md  FINAL_DEVARMOR_ENTERPRISE_DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  index.html  pyproject.toml  setup.py
.github/workflows/: build-index.yml  pip-index.yml
docs/: EXTENSION_FRAMEWORK_IMPLEMENTATION.md  index.md  packages.md
policies/: README.md  __init__.py  compliance.yaml  cost_control.yaml  development.yaml  production.yaml  security.yaml  validate_policies.py
policies/examples/: __init__.py  enterprise_soc2.yaml  terrorgem_phase0.yaml  terrorgem_phase1.yaml
policies/tests/: __init__.py  test_policies.py
schema/: skill-manifest-schema.json
schema/examples/: github-skill-manifest.yaml
simple/confluence-skill/: index.html
simple/devarmor-core/: index.html
simple/github-skill/: index.html
simple/green-skill/: index.html
simple/jira-skill/: index.html
simple/parallelize-task/: index.html
simple/prcheck-skill/: index.html
