[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hoad-python-packages"
version = "1.0.0"
description = "Hoad Python Packages - PEP 503 compliant index"
authors = [{name = "Hoad", email = "team@hoad.org"}]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
]

[tool.setuptools]
# Workspace configuration for monorepo structure
packages = ["packages"]

[project.optional-dependencies]
# DevArmor Core integration (optional)
devarmor = ["devarmor-core>=0.1.0"]
# All optional packages
all = ["devarmor-core>=0.1.0"]
